--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   p#par${Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati?}*2
+   <p id="par1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati?</p>
+   <p id="par2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati?</p>
 </body>
 </html>
