work_in_progress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <p id="par1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati?</p>
+   <p id="par1"><span>Lorem</span> ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati?</p>
    <p id="par2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptas ipsam vitae veniam necessitatibus ipsa eos ullam rem, nobis molestiae dolorem ab veritatis obcaecati, asperiores illo! Suscipit minima, quaerat obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste quae, reiciendis recusandae quasi eligendi voluptate. Numquam dignissimos animi in illo iusto! Deserunt, corrupti, provident. Magnam rem corporis at quasi sint.</p>
    <ul>
        <li>tekst1</li>
@@ -16,12 +16,14 @@
        <li>tekst5</li>
    </ul>
    <ul>
-       <li><a href="">link do strony</a></li>
-       <li><a href="http://akademia108.pl">link do strony</a></li>
+       <li><a href="#par1">link do strony</a></li>
+       <li><a href="#par2">link do strony</a></li>
        <li><a href="">link do strony</a></li>
        <li><a href="">link do strony</a></li>
        <li><a href="">link do strony</a></li>
        <li><a href="http://interia.pl">link do strony</a></li>
    </ul>
+   <input type="text">
+   <div></div>
 </body>
 </html>
