--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
    </ul>
    <input type="text">
    <div></div>
+   <form action="">
+       <input type="text" title="Tytuł">
+       <input type="text" title="Zupełnie inny tytuł">
+       <input type="text" title="Tytuł po raz trzeci">
+       <input type="email">
+   </form>
 </body>
 </html>
